# tiny_mprpc

./: CMakeLists.txt  README.md
example/callee/: CMakeLists.txt  userservice.cc
example/caller/: calluserservice.cc
src/: CMakeLists.txt  logger.cc  mprpcapplication.cc  mprpcchannel.cc  mprpcprovider.cc  rpcprovider.cc
src/include/: lockqueue.h  logger.h  mprpcapplication.h  mprpcchannel.h  mprpcprovider.h
zookeeper/src/c/: Makefile  cli_mt  cli_st  config.h  config.status  libtool  libzookeeper_mt.so.2  load_gen
zookeeper/src/c/.libs/: cli_mt  cli_st  libzookeeper_mt.exp  libzookeeper_st.so.2.0.0  libzookeeper_st.ver  load_gen
